<resources>
    <string name="app_name">SATECO Banche</string>

    <string name="title_activity_open_file">Ouvrir le fichier</string>
    <string name="title_activity_save_file">Enregistrer le fichier</string>

    <string name="label_save_file_name">Nom de fichier</string>
    <string name="dialog_hint_file_name">Entrer le nom de fichier</string>
    <string name="extension_filter_hint">Filtre d\'extension</string>

    <string name="error_invalid_file_name">Nom de fichier non validé.</string>
    <string name="error_empty_field">Ce champ est obligatoire.</string>

    <string name="extension_filter_csv">Fichier CSV (*.csv)</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Annuler</string>

    <string name="export_data_time">Temps</string>
    <string name="export_data_pressure">Pression</string>
    <string name="export_data_successful">Export des données réussies.</string>
    <string name="export_no_data">Pas de données disponibles.</string>

    <string name="pressure_x_axis">Temps (minutes)</string>
    <string name="pressure_y_axis">Pression (Tf)</string>

    <string name="version">Version</string>

    <string name="action_sync">Synchroniser les données</string>
    <string name="action_information">Information</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_clear">Effacer les données</string>
    <string name="title_clear_data">Effacer les données</string>
    <string name="message_clear_data">Voulez-vous vraiment effacer toutes les données?</string>
    <string name="unable_clear_database">Impossible d\'effacer les bases de données</string>

    <string name="action_export_data">Exporter les données</string>

    <string name="heightlabel">Hauteur</string>
    <string name="heightvalue">0</string>
    <string name="heightunit">cm</string>

    <string name="thicknesslabel">Epaisseur</string>
    <string name="thicknessvalue">0</string>
    <string name="thicknessunit">cm</string>

    <string name="niveaulabel">Niveau</string>
    <string name="niveauvalue">0</string>
    <string name="niveauunit">°</string>

    <string name="aplomblabel">Aplomb</string>
    <string name="aplombvalue">0</string>
    <string name="aplombunit">°</string>

    <string name="pressurelabel">Pression</string>
    <string name="pressurevalue">0</string>
    <string name="pressureunit">Tf</string>

    <string name="legend_pressure">Pression</string>

    <string name="tabdistance">Capteur de distance</string>
    <string name="tabangle">Inclinomètre</string>
    <string name="tabpressure">Capteur de pression</string>

    <string name="usb_ready">Clé USB prête.</string>
    <string name="usb_permission_not_granted">Permission de clé USB non-accordée.</string>
    <string name="no_usb_connected">Clé USB non-connectée.</string>
    <string name="usb_disconnected">Clé USB déconnectée.</string>
    <string name="usb_device_not_supported">Périphérique de clé USB non pris en charge.</string>

    <string name="found_wifi_network">Réseau wifi disponibles.</string>
    <string name="found_mobile_internet_network">Réseau mobile disponibles.</string>
    <string name="no_wifi_or_3g_enabled">Pas de wifi ou 3G activé.</string>

    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>

    <string name="nav_img_desciption">Image description</string>
    <string name="splash_image_description">Splash image description</string>
    <string name="title_activity_settings">Paramètres</string>
</resources>
