<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pressure_line_chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="eu.dfm.satecobanche.widgets.PressureLineChartActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartPressure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/pressurelabel"
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/lblPressureXAxis"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/lblPressureYAxis" />

    <TextView
        android:id="@+id/pressurelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="true"
        android:text="@string/pressurelabel"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="15dp"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/pressureunit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:text="@string/pressureunit"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/pressurevalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:text="@string/pressurevalue"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toLeftOf="@+id/pressureunit"
        android:layout_toRightOf="@+id/pressurelabel"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true" />

    <eu.dfm.satecobanche.functions.VerticalTextView
        android:text="@string/pressure_y_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPressureYAxis"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true" />

    <TextView
        android:text="@string/pressure_x_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPressureXAxis"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
